<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context="com.example.kongdech.finalend.Test">

    <ImageButton
        android:id="@+id/btn1"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/test1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="34dp" />

    <ImageButton
        android:id="@+id/btn2"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginLeft="211dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/test2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn3"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="217dp"
        android:src="@drawable/test3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn4"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginLeft="211dp"
        android:layout_marginTop="217dp"
        android:src="@drawable/test4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn5"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="401dp"
        android:src="@drawable/test5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn6"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginLeft="211dp"
        android:layout_marginTop="401dp"
        android:src="@drawable/test6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="0dp"
        android:text="@string/exer1"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="236dp"
        android:layout_marginTop="0dp"
        android:text="@string/exer2"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="0dp"
        android:text="@string/exer3"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="236dp"
        android:layout_marginTop="0dp"
        android:text="@string/exer4"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="0dp"
        android:textColor="@android:color/black"
        android:text="@string/exer5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="236dp"
        android:layout_marginTop="0dp"
        android:textColor="@android:color/black"
        android:text="@string/exer6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

</android.support.constraint.ConstraintLayout>
