<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kongdech.finalend.page1"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    android:background="@drawable/bg1">


    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="99dp"
        android:layout_height="99dp"

        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/unit1_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="99dp"
        android:layout_height="99dp"

        android:layout_marginEnd="16dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/unit1_2"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="176dp"
        android:layout_weight="0.04"
        android:src="@drawable/unit2_1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="176dp"
        android:layout_weight="0.04"
        android:src="@drawable/unit2_2"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="325dp"
        android:layout_weight="0.04"
        android:src="@drawable/unit3_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="325dp"
        android:layout_weight="0.04"
        android:src="@drawable/unit3_2"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginLeft="260dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="56dp"
        android:layout_weight="0.07"
        android:src="@drawable/testing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginStart="43dp"
        android:src="@drawable/voca"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6"
        android:layout_marginLeft="299dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.8" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:textColor="@android:color/black"
        android:text="@string/text1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textColor="@android:color/black"
        android:text="@string/text2"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        android:layout_marginLeft="200dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="0dp"
        android:text="@string/text3"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        android:layout_marginLeft="66dp"
        android:layout_marginTop="0dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="0dp"
        android:text="@string/text5"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="0dp"
        android:text="@string/text6"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="0dp"
        android:text="@string/text7"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="0dp"
        android:text="@string/text8"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8" />


</android.support.constraint.ConstraintLayout>

